apps/tomcatapp/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: tomcatapp-stable
  namespace: production
  labels:
    app: tomcatapp
spec:
  selector:
    app: tomcatapp
  ports:
    - name: http
      port: 8080
      targetPort: 8080
    - name: metrics
      port: 9404
      targetPort: 9404
---
apiVersion: v1
kind: Service
metadata:
  name: tomcatapp-canary
  namespace: production
  labels:
    app: tomcatapp
spec:
  selector:
    app: tomcatapp
  ports:
    - name: http
      port: 8080
      targetPort: 8080
    - name: metrics
      port: 9404
      targetPort: 9404
