apps/tomcatapp/base/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: tomcatapp
  namespace: production
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /tomcatapp/$2
spec:
  ingressClassName: nginx
  rules:
    - host: tomcatapp.devops.local
      http:
        paths:
          - path: /(/|$)(.*)
            pathType: Prefix
            backend:
              service:
                name: tomcatapp-stable
                port:
                  number: 8080
